--- a/2049-FokusCurso-proyecto-inicial/index.html
+++ b/2049-FokusCurso-proyecto-inicial/index.html
@@ -38,8 +38,7 @@
             <div class="app__card">
                 <ul class="app__card-list">
                     <li class="app__card-list-item">
-<!--                         <button data-contexto="enfoque" class="app__card-button app__card-button--enfoque active">Enfoque</button> -->
-                    <button data-contexto="enfoque" class="app__card-button app__card-button--enfoque">Enfoque</button>
+                        <button data-contexto="enfoque" class="app__card-button app__card-button--enfoque active">Enfoque</button>
                     </li>
                     <li class="app__card-list-item">
                         <button data-contexto="short" class="app__card-button app__card-button--corto">Descanso corto</button>
@@ -77,7 +76,7 @@
             </p>
         </footer>
     </main>
-//<script src=""></script>
+
 </body>
 
 </html>
